add_subdirectory( GetImageSize )
add_subdirectory( DisplayAnImage )
add_subdirectory( ConvertRGBImageToHSVImages )
add_subdirectory( ConvertRGBImageToYCbCrImages )
add_subdirectory( DrawCircle )
add_subdirectory( SURFFeatureDetection )
add_subdirectory( MSERFeatureDetection )
add_subdirectory( STARFeatureDetection )
add_subdirectory( HoughCircles )
add_subdirectory( HoughLines )
add_subdirectory( GoodFeaturesToTrack )
