add_subdirectory( GetImageSizeIpl )
add_subdirectory( DisplayAnImageIpl )
add_subdirectory( ConvertRGBImageToHSVImagesIpl )
add_subdirectory( ConvertRGBImageToYCbCrImagesIpl )
add_subdirectory( DrawCircleIpl )
add_subdirectory( SURFFeatureDetectionIpl )
add_subdirectory( MSERFeatureDetectionIpl )
add_subdirectory( STARFeatureDetectionIpl )
add_subdirectory( HoughCirclesIpl )
add_subdirectory( HoughLinesIpl )
add_subdirectory( GoodFeaturesToTrackIpl )
add_subdirectory( ExtractRGBComponentsIpl )
add_subdirectory( BinaryThresholdIpl )
