add_subdirectory( KMeansOnRGBImage )
add_subdirectory( ExtractRGBComponents )
add_subdirectory( BinaryThreshold )
add_subdirectory( DisplayAnImage )
add_subdirectory( GetImageSize )
add_subdirectory( DisplayHistogram )
add_subdirectory( DisplayRGBHistogram )
add_subdirectory( ConvertRGBImageToHSVImages )
add_subdirectory( ConvertRGBImageToYCbCrImages )