add_subdirectory( KMeansOnRGBImage )
add_subdirectory( ExtractRGBComponents )
add_subdirectory( BinaryThreshold )
add_subdirectory( DisplayAnImage )
add_subdirectory( GetImageSize )
add_subdirectory( DisplayHistogram )
add_subdirectory( DisplayRGBHistogram )
add_subdirectory( ConvertRGBImageToHSVImages )
add_subdirectory( ConvertRGBImageToYCbCrImages )
add_subdirectory( DrawCircle )
add_subdirectory( HoughCircles )
add_subdirectory( HoughLines )
add_subdirectory( GoodFeaturesToTrack )
add_subdirectory( MSERFeatureDetection )
add_subdirectory( STARFeatureDetection )
add_subdirectory( SURFFeatureDetection )
add_subdirectory( ConvertIplToMat )
add_subdirectory( YCrCbSkinDetection )
add_subdirectory( CannyEdgeDetector )
add_subdirectory( RotateAnImage )
